axios end poind setup in index

--- a/src/.env
+++ b/src/.env
@@ -2,5 +2,5 @@ ESLINT_NO_DEV_ERRORS=true
 PUBLIC_URL='/'
 REACT_APP_TINYMCE_APIKEY=
 REACT_APP_GOOGLE_API_KEY=
-REACT_APP_API_URL=http://axiserp.test/api/
-REACT_APP_BASE_URL =http://axiserp.test/
+REACT_APP_API_URL=http://app.test/api/
+REACT_APP_BASE_URL =http://app.test/
